# sprintf

./: Cargo.toml  README.md  rustfmt.toml
examples/simple/: Cargo.toml  main.rs
src/: extractor.rs  lib.rs  parser.rs  printer.rs  types.rs
